<?xml version="1.0"?>
<package format="2">
  <name>robosys</name>
  <version>0.0.0</version>
  <description>robosys asteroid rover</description>

  <maintainer email="carl.moser@students.olin.edu">carl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export></export>
</package>